# serial_cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
serial_cli/: __init__.py  __main__.py  cli.py  core.py
